# fast-recce

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a1e68db884a_enable_postgres_extensions.py  221bb5995531_create_sources_and_query_bank_tables.py  28197a269f8b_add_properties_property_contacts_and_do_.py  4875a0dc2f58_add_users_and_outreach_queue_tables.py  4a88908c8aca_add_discovery_candidates_table.py  4af2187029ca_rewrite_seed_queries_with_google_.py  6c40084298be_seed_phase1_sources_and_default_queries.py  eeff978b8742_add_gist_and_trigram_indexes_for_dedup_.py
backend/app/: __init__.py  config.py  database.py  exceptions.py
backend/app/api/: __init__.py  analytics.py  auth.py  deps.py  main.py  outreach.py  properties.py  queries.py  search.py  sources.py
backend/app/integrations/: __init__.py  airbnb_scraper.py  duckduckgo.py  external_listing.py  external_listing_source.py  google_places.py  llm.py  magicbricks_scraper.py
backend/app/models/: __init__.py  contact.py  discovery.py  enums.py  outreach.py  property.py  query_bank.py  source.py  user.py
backend/app/pipeline/: __init__.py
backend/app/schemas/: analytics.py  auth.py  briefing.py  contact.py  crawl.py  dedup.py  discovery.py  outreach.py  property.py  query_bank.py  review.py  scoring.py  search.py  source.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  briefing_service.py  contact_service.py  crawler_service.py  dedup_service.py  discovery_service.py  outreach_service.py  property_service.py  query_bank_service.py  scoring_service.py  search_service.py  source_service.py  user_service.py
backend/app/services/extractors/: __init__.py  media.py  structured.py  unstructured.py
backend/scripts/: create_user.py  dedup_properties.py  generate_briefs.py  process_candidates.py  run_crawl.py  run_discovery.py  score_properties.py
backend/tests/: conftest.py
backend/tests/unit/: test_airbnb_scraper.py  test_auth_and_users.py  test_briefing_service.py  test_contact_service.py  test_crawler_service.py  test_dedup_service.py  test_discovery_service.py  test_duckduckgo_client.py  test_extractors.py  test_google_type_blocklist.py  test_magicbricks_scraper.py  test_outreach_service.py  test_property_review.py  test_property_service.py  test_query_bank_service.py  test_scoring_service.py  test_search_service.py  test_source_router.py  test_source_service.py
docs/: api-spec.md  database-schema.md  frontend-design.md  module-breakdown.md  service-design.md  system-architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  (+2 more)
(+24 files in other folders)
