[project]
name = "fastrecce"
version = "0.1.0"
description = "FastRecce — Location Acquisition OS for shoot-worthy properties"
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "geoalchemy2>=0.16.0",

    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # HTTP & scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "playwright>=1.49.0",

    # Redis & queueing
    "redis>=5.2.0",

    # Scheduling
    "prefect>=3.1.0",

    # LLM (Google Gemini via the unified google-genai SDK)
    "google-genai>=0.3.0",

    # Storage
    "boto3>=1.35.0",

    # Image processing
    "Pillow>=11.0.0",
    "imagehash>=4.3.1",

    # Utilities
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "types-python-jose>=3.3.0",
    "types-passlib>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function calls in defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # allow asserts in tests
"alembic/**/*" = ["E402", "F401"]  # allow late imports in migrations

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "imagehash.*",
    "geoalchemy2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
